[gd_scene load_steps=13 format=3 uid="uid://bqeaqtd7s2fyb"]

[ext_resource type="Texture2D" uid="uid://boaicoghl6qf2" path="res://art/BlackLotusSeed.png" id="1_ps2l2"]
[ext_resource type="Texture2D" uid="uid://bgowfnk7ys82w" path="res://art/BlackLotusSeedHover.png" id="2_y0r16"]
[ext_resource type="Script" path="res://black_lotus.gd" id="3_fsnjo"]
[ext_resource type="FontFile" uid="uid://vgv1ku8o106o" path="res://art/Harvest Season.otf" id="4_tfesu"]
[ext_resource type="Texture2D" uid="uid://fw0qo8gqnrrg" path="res://art/rain_particle.png" id="5_n3gjb"]
[ext_resource type="AudioStream" uid="uid://531hhrg0vrob" path="res://art/water_plant_sound.mp3" id="6_wxc7w"]
[ext_resource type="AudioStream" uid="uid://o660qafg4t38" path="res://art/spray_sound.mp3" id="7_g70y6"]
[ext_resource type="AudioStream" uid="uid://cjyfxq273tw54" path="res://art/prune_sound.mp3" id="8_h883u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkjcm"]
bg_color = Color(0.470588, 0.419608, 0.301961, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7g5h1"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 16.0
expand_margin_right = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3dw1"]
bg_color = Color(0.917647, 0.917647, 0.917647, 0.407843)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 16.0
expand_margin_right = 16.0

[sub_resource type="CanvasTexture" id="CanvasTexture_xm3xf"]
diffuse_texture = ExtResource("5_n3gjb")

[node name="BlackLotus" type="TextureButton"]
z_index = 1
offset_left = -9.0
offset_top = -4.0
offset_right = 380.0
offset_bottom = 487.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_ps2l2")
texture_hover = ExtResource("2_y0r16")
script = ExtResource("3_fsnjo")

[node name="LotusTimer" type="Timer" parent="."]
wait_time = 300.0

[node name="LotusPanel" type="Panel" parent="."]
visible = false
z_index = 1
custom_minimum_size = Vector2(1400, 400)
layout_mode = 0
offset_left = -470.0
offset_top = 190.0
offset_right = 930.0
offset_bottom = 590.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xkjcm")

[node name="LotusLabel" type="Label" parent="LotusPanel"]
layout_mode = 0
offset_left = 60.0
offset_top = 29.9998
offset_right = 380.0
offset_bottom = 66.9998
scale = Vector2(4, 4)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("4_tfesu")
theme_override_font_sizes/font_size = 25
text = "Test"
horizontal_alignment = 1

[node name="WaterButton" type="Button" parent="LotusPanel"]
layout_mode = 0
offset_left = 95.0
offset_top = 185.0
offset_right = 400.0
offset_bottom = 333.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("4_tfesu")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_7g5h1")
theme_override_styles/hover = SubResource("StyleBoxFlat_v3dw1")
text = "Water"

[node name="FertilizerButton" type="Button" parent="LotusPanel"]
layout_mode = 0
offset_left = 905.0
offset_top = 185.0
offset_right = 1302.0
offset_bottom = 333.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("4_tfesu")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_7g5h1")
theme_override_styles/hover = SubResource("StyleBoxFlat_v3dw1")
text = "Fertilize"

[node name="PruneButton" type="Button" parent="LotusPanel"]
layout_mode = 0
offset_left = 500.0
offset_top = 185.0
offset_right = 807.0
offset_bottom = 333.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("4_tfesu")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_7g5h1")
theme_override_styles/hover = SubResource("StyleBoxFlat_v3dw1")
text = "Prune"

[node name="CloseButton" type="Button" parent="LotusPanel"]
layout_mode = 0
offset_left = 1280.0
offset_top = -5.0
offset_right = 1387.0
offset_bottom = 135.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("4_tfesu")
theme_override_font_sizes/font_size = 100
text = "x"
flat = true

[node name="WaterParticles" type="CPUParticles2D" parent="."]
z_index = 2
position = Vector2(225, -295)
emitting = false
amount = 20
lifetime = 0.7
one_shot = true
texture = SubResource("CanvasTexture_xm3xf")
emission_shape = 3
emission_rect_extents = Vector2(200, 1)
scale_amount_min = 0.1
scale_amount_max = 0.15

[node name="FertilizerParticles" type="CPUParticles2D" parent="."]
z_index = 2
position = Vector2(225, -295)
emitting = false
amount = 20
lifetime = 0.7
one_shot = true
emission_shape = 3
emission_rect_extents = Vector2(200, 1)

[node name="WaterTimer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true

[node name="PruneTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="WaterSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_wxc7w")
volume_db = 18.0

[node name="FertilizerSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_g70y6")
volume_db = 4.0

[node name="PruneSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_h883u")
volume_db = 6.0

[connection signal="pressed" from="." to="." method="_on_black_lotus_pressed"]
[connection signal="timeout" from="LotusTimer" to="." method="_on_lotus_timer_timeout"]
[connection signal="pressed" from="LotusPanel/WaterButton" to="." method="_on_water_button_pressed"]
[connection signal="pressed" from="LotusPanel/FertilizerButton" to="." method="_on_fertilizer_button_pressed"]
[connection signal="pressed" from="LotusPanel/PruneButton" to="." method="_on_prune_button_pressed"]
[connection signal="pressed" from="LotusPanel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="timeout" from="WaterTimer" to="." method="_on_water_timer_timeout"]
[connection signal="timeout" from="PruneTimer" to="." method="_on_prune_timer_timeout"]
